# G4_Simple_Examples

./: license.md
1. Simple Simulation/: CMakeLists.txt  main.cpp
1. Simple Simulation/PhysicsList/: CMakeLists.txt  H4PhysicList.cpp
1. Simple Simulation/PrimaryGenerator/: H4PrimaryGenerator.hpp
2. Graphic Interface/: CMakeLists.txt  init_vis.mac  main.cpp  vis.mac
2. Graphic Interface/Actions/: H4Actions.cpp  H4Actions.hpp
2. Graphic Interface/PrimaryGenerator/: H4PrimaryGenerator.cpp
2. Graphic Interface/include/: CMakeLists.txt  GeneralG4.hpp
3. Electromagnetic Physic Lists/: CMakeLists.txt
3. Electromagnetic Physic Lists/Detector/: CMakeLists.txt  H4Detector.cpp
3. Electromagnetic Physic Lists/PhysicList/: H4PhysicList.cpp  H4PhysicList.hpp
3. Electromagnetic Physic Lists/PrimaryGenerator/: H4PrimaryGenerator.hpp
3. Electromagnetic Physic Lists/include/: GeneralG4.hpp
4. Magnetic Field/: CMakeLists.txt
4. Magnetic Field/Detector/: H4Detector.cpp  H4Detector.hpp
4. Magnetic Field/PhysicsList/: H4PhysicList.cpp
4. Magnetic Field/PrimaryGenerator/: H4PrimaryGenerator.cpp  H4PrimaryGenerator.hpp
4. Magnetic Field/include/: GeneralG4.hpp
5. Multiple Vertex/: CMakeLists.txt  main.cpp
5. Multiple Vertex/PrimaryGenerator/: H4PrimaryGenerator.cpp  H4PrimaryGenerator.hpp
5. Multiple Vertex/include/: GeneralG4.hpp
6. General Particle Source/: CMakeLists.txt  vis.mac
6. General Particle Source/Detector/: H4Detector.cpp
6. General Particle Source/PrimaryGenerator/: H4PrimaryGenerator.cpp  H4PrimaryGenerator.hpp
Detector/: H4Detector.cpp
(+5 files in other folders)
